# Hi

./: pyproject.toml
config/: identity.md  lace.yaml  preferences.yaml
scripts/: add_wikilinks.py
src/lace/: __init__.py  main.py
src/lace/core/: config.py  engine.py  identity.py  scope.py
src/lace/graph/: __init__.py  graph.py  parser.py  traversal.py  wikilinks.py
src/lace/mcp/: resources.py  server.py  tools.py
src/lace/memory/: dedup.py  extractor.py  markdown.py  models.py  store.py
src/lace/retrieval/: embeddings.py  ranking.py  vector.py
src/lace/utils/: ask.py  logging.py  providers.py  tokens.py
src/lace/vault/: __init__.py  state.py  sync.py  watcher.py
tests/test_core/: test_config.py  test_identity.py  test_scope.py
tests/test_graph/: test_graph.py  test_parser.py  test_traversal.py
tests/test_mcp/: test_tools.py
tests/test_memory/: test_dedup.py  test_extractor.py  test_feedback.py  test_markdown.py  test_models.py  test_store.py
tests/test_retrieval/: test_embeddings.py  test_ranking.py  test_vector.py
tests/test_utils/: test_ask.py  test_logging.py
tests/test_vault/: test_state.py  test_sync.py
